# fusemachine

./: .env.example  README.md  docker-compose.yaml
.github/workflows/: ci.yml
chat_app_backend/: .env.example  Dockerfile  config.py  pyproject.toml  requirements.txt
chat_app_backend/mysite/: main.py
docs/: mkdocs.yml
docs/docs/: index.md
frontend/: Dockerfile
frontend/static/: index.html
tests/: test_data.py
