[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mysite"
version = "0.0.1"
description = "Talk"
authors = [
  { name = "Ankit Raj Mehta" },
]

classifiers = [
    "Programming Language :: Python :: 3",

]

[tool.ruff]
line-length = 99
src = ["chat_app_backend"]
include = ["pyproject.toml", "chat_app_backend/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mysite"]
force-sort-within-sections = true
